@@ -421,7 +421,10 @@ Angel Carpintero
    * Fix fd leaks in external pipe. 
    * Fix segfault for new libjpeg v7.
    * Allow to change Standard method ( PAL / NECAM / SECAM ).
-
+   * Exit when image dimension are not modulo 16.
+   * Avoid logs flooding using some options of netcam_keepalive and try to discard images with
+     weird header Content-Lenght 0.
+   * Only use post capture when we setup to record videos with external pipe or ffmpeg.
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
